# ctf-checker

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yaml
examples/exploits/: echo_flag.py
src/ctfchecker/: cli.py  config.py  models.py  notifier.py  runner.py  scheduler.py  storage.py  submitter.py  utils.py
tests/: test_config.py
